[package]
name = "ws2812b-embassy"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.71", default-features = false }
embedded-hal = "0.2.7"
#embedded-dma = "0.2.0"
nb = "1"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"

defmt = "0.3.5"
defmt-rtt = "0.4.0"

panic-probe = "0.3.1"

smart-leds-trait = "0.2.1"
#pwm-dma = { path = "pwm-dma" }

#[dependencies.stm32f4xx-hal]
#version = "0.15.0"
#features = ["stm32f411"]


[dependencies.embassy-sync]
version = "0.5.0"
git = "https://github.com/embassy-rs/embassy.git"
#features = ["nightly"]

[dependencies.embassy-executor]
version = "0.4.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread"]

[dependencies.embassy-stm32]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["stm32f411ce", "time-driver-any", "exti"]

[dependencies.embassy-time]
version = "0.2.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt"]